# physical_ai_and_humanoid_robotics

./: .env.example  .gitignore  ENVIRONMENT_SETUP.md  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  requirements.txt  test_rag_flow.py  test_rag_logic.py
.claude/: settings.local.json
.claude/commands/: sp.git.commit_pr.md
.github/workflows/: ci-cd.yml
.specify/memory/: constitution.md
backend/: .gitignore  Dockerfile  README.md  agent.py  alembic.ini  config.py  exceptions.py  final_integration_test.py  ingestion.py  logging_config.py  main.py  main_delayed.py  main_minimal.py  requirements.txt  retrieve.py  start.sh  test_book_url.py  test_chunking.py  test_embedding.py  test_target_final.py  update_document_id.py
backend/alembic/: env.py
backend/models/: chat.py  error.py  health.py
backend/rag_validation/: README.md  config_loader.py  embedding_validator.py  error_handler.py  error_validator.py  logger.py  main.py  performance_utils.py  performance_validator.py  retrieval_validator.py  storage_validator.py  test_data.py  validation_report.py  visualization_utils.py
backend/services/: rag_agent.py
backend/src/api/: chat.py  documents.py  health.py
backend/src/config/: database.py  vector_db.py
backend/src/core/: config.py  mcp_integration.py
backend/src/database/: __init__.py  session.py
backend/src/models/: conversation.py  document_chunk.py  (+4 more)
code/module1/chapter1/: CMakeLists.txt  README.md
code/module1/chapter5/simple_package/: CMakeLists.txt  package.xml  setup.cfg  setup.py  simple_listener.py
code/module1/chapter5/simple_package/launch/: simple_launch.py  simple_launch.xml
code/module1/chapter5/simple_package/src/: simple_talker.cpp
config/: validation_config.json
content/: Dockerfile  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
content/code/module1/chapter1/: minimal_publisher.py  minimal_subscriber.py  package.xml
content/docs/: intro.md
docs/: api-reference.md  architecture.md  contributing.md  docusaurus.config.ts  package-lock.json  setup-deployment.md  sidebars.ts
frontend/: response-style-implementation.md  text-selection-implementation.md
specs/1-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-validation-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-robotics-book-spec/: plan.md  spec.md  tasks.md
specs/2-website-ingestion/: plan.md  spec.md  tasks.md
specs/3-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/4-agent-rag-orchestration/: data-model.md  implementation-plan.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  testing-strategy.md
specs/5-rag-chatbot-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/6-rag-chatbot-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.bak
tests/integration/: test_agent_integration.py  test_comprehensive_validation.py  test_embedding_integration.py  test_end_to_end.py  test_error_integration.py  test_performance_integration.py  test_qdrant_connection.py  test_retrieval_integration.py  test_storage_integration.py
tests/unit/: test_agent.py  test_content_compliance.py  test_embedding_validator.py  test_error_validator.py  test_performance_validator.py  test_retrieval_validator.py  test_retrieve.py  test_storage_validator.py
tests/validation/: final_validation.py
(+166 files in other folders)
